--- a/Vendedora de Carro/styles.css
+++ b/Vendedora de Carro/styles.css
@@ -30,6 +30,14 @@
         font-size: 24px;
     }
 
+    header img{
+        width: 100px;
+    }
+
+    .header-menu{
+        display: flex;
+        gap: 20px;
+    }
 /* Estilo do menu de seleção */
 
     header-menu select{
@@ -40,20 +48,53 @@
         cursor: pointer;
     }
 
+    /* Corrigindo a redundância das selects */
+
+    .header-menu select option:first-child {
+        color: #888;
+        font-weight: bold;
+    }
+
 /* Estilo do banner principal */
 
     .banner {
-        height: 400px;
-        background: url('https://estrelalocadoramg.com.br/wp-content/uploads/2019/03/frota-2.png') no-repeat center/cover;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #ffffff;
-        font-size: 36px;
-        font-weight: bold;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+       position: relative;
+       width: 100%;
+       height: 400px;
+       overflow: hidden;
     }
 
+    .slides {
+        display: flex;
+        animation: slide 10s infinite;
+
+    }
+
+    .slides img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+    }
+
+
+    @keyframes slide {
+        0% {
+            transform: translateX(0);
+        }
+
+        50% {
+            transform: translateX(-100%);
+        }
+
+        80% {
+            transform: translateX(-100%);
+        }
+
+         100% {
+            transform: translateX(0);
+        }
+
+    }
 /* Estilo do catálogo */
 
     .catalog {
@@ -121,19 +162,25 @@
     }
 
 /* Titulo da seção de contato */
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 50px;
+}
+
+.contact-form{
+    background-color: #f9f9f9;
+    padding: 40px 50px;
+    margin-top: 40px;
+}
+
 
     .contact-form h2{
         font-size: 28px;
         margin-bottom: 20px;
     }
 
-/* Estilo da seção */
 
-    .contact-form{
-        background-color: #f9f9f9;
-        padding: 40px 50px;
-        margin-top: 40px;
-    }
 
 /* Estilo dos labels */
 
@@ -145,11 +192,71 @@
 
 /* Estilo dos campos de entrada /input */
 
-    .contact-form input
+    .contact-form input,
     .contact-form textarea {
         width: 100%;
         padding: 10px;
         margin-bottom: 20px;
         border: 1px solid #ccc;
         border-radius: 5px;
+    }
+
+    /* Estilização do botão */
+
+    .contact-form button{
+        background-image: url('');
+        width: 100%;
+        padding: 15px 30px;
+        background-color: #555;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 18px;
+        transition: background-color 0.3s ease;
+    }
+
+    .contact-form button:hover{
+        background-color: rgb(250, 246, 0);
+    }
+
+    /* Estilo do footer */
+
+    footer{
+        display: grid;
+        grid-auto-columns: repeat (3,1fr);
+        background-color: #333;
+        color: #fff;
+        padding: 30px 50px;
+    }
+
+    footer ul{
+        list-style: none;
+    }
+
+    footer ul li a{
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        transition: color 0.3s ease;
+    }
+
+    footer ul li a:hover{
+        color: #fff;
+    }
+
+    footer p{
+        grid-column:span 3;
+        text-align: center;
+        margin-top: 20px;
+        font-size: 14px;
+        color: #bbb;
+    }
+
+    /* Estilo Responsivo */
+
+    @media (max-width: 768px) {
+        .catalog{
+            grid-template-columns: repeat(2,1fr);
+        }
     }
